# viskoz-app

./: .gitignore  README.md  Taskfile.yaml  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  cli_bridge.rs  commands.rs  lib.rs  main.rs  rest_client.rs  types.rs
src/lib/: AuthPage.svelte  MeshPanel.svelte  RunnerForm.svelte  RunnersTable.svelte  ServerForm.svelte  ServersTable.svelte  TailscaleBadge.svelte  UserMenu.svelte  api.js  stores.js  theme.css
