[package]
name = "viskoz-app"
version = "0.1.0"
description = "Desktop-обёртка над runner CLI: admin/user/runner роли, статус Tailscale"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

keyring = "3"

tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2.0.18"
tauri-plugin-store = "2"

[lib]
name = "viskoz_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
